@@ -77,6 +77,9 @@ lintian (2.5.11) UNRELEASED; urgency=low
     + [NT] Always use Dpkg::Vendor to determine the default
       vendor.  Previously dpkg-vendor would be preferred if
       available.
+  * lib/Lintian/Path.pm:
+    + [NT] Always resolve hardlinks relative to the package
+      root.
   * lib/Lintian/Unpacker.pm:
     + [NT] New file.
 
